<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    tools:context=".Fragments.ProfileFragment" >

    <TextView
        android:id="@+id/tvProfile"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:background="@color/dark_blue"
        android:gravity="center"
        android:text="@string/my_profile"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:layout_gravity="top|start"/>

    <TextView
        android:id="@+id/tvNameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="150dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical" />

    <EditText
        android:id="@+id/etNameProfile"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/etMailProfile"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tvMailProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="50dp"
        android:text="@string/correo"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical" />

    <Button
        android:id="@+id/bChangeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:text="@string/change_info"
        android:layout_gravity="bottom|center"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/profile_type"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvPrType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="12dp"
        android:text="unknown"
        android:textColor="@color/white"
        android:textSize="16sp" />

</FrameLayout>